force-app/main/default/objects/Invoice__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Company__r.BillingStreet &amp;&quot; &quot;&amp; Company__r.BillingCity &amp;&quot; &quot;&amp;Company__r.BillingState &amp;&quot; &quot;&amp;Company__r.BillingCountry&amp;&quot; &quot;&amp; Company__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>