force-app/main/default/objects/Invoice__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <label>Grand Total</label>
    <summarizedField>InvoiceLineItem__c.FinalAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>