force-app/main/default/objects/Invoice__c/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>