force-app/main/default/objects/Invoice__c/fields/FromPhone__c.field-meta.xml
<CustomField>
    <fullName>FromPhone__c</fullName>
    <label>From Phone</label>
    <type>Phone</type>
</CustomField>