force-app/main/default/objects/Invoice__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>Company__r.GSTNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <type>Text</type>
</CustomField>