force-app/main/default/objects/Invoice__c/fields/TotalLineAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalLineAmount__c</fullName>
    <label>Total Line Amount</label>
    <summarizedField>InvoiceLineItem__c.TotalAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>