force-app/main/default/objects/Invoice__c/fields/TotalRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRefundAmount__c</fullName>
    <label>Total Refund Amount</label>
    <summarizedField>Refund__c.Amount__c</summarizedField>
    <summaryForeignKey>Refund__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>